# demo-ai-assistant

./: '  .gitignore  CLAUDE.md  README.md  packages.txt  prompts.txt  pyproject.toml  requirements.txt  streamlit_app.py
src/: __init__.py  config.py  cv_generator.py  data_utils.py  llm_client.py  metrics.py  prompts.py  schemas.py  session_helpers.py  templates.py  ui_helpers.py
